# MSTour

./: .env.example  .gitattributes  .gitignore  AUDIT_TOOLS_README.md  CMakeLists.txt  MSTour Startup.lnk  README.md  audit_pages.bat  coast_test.c  config.ini  confluence_compare.py  startup.bat
.github/: copilot-instructions.md
.github/agents/: docs-agent.agent.md  engine-agent.agent.md  game-agent.agent.md  game-design-consultant.agent.md  game-design-creator.agent.md  jira-agent.agent.md  test-agent.agent.md
.github/skills/confluence-edit/: SKILL.md
assets/data/: pois.json
assets/sounds/: README.md
assets/textures/: README.md  generate_placeholders.py
docs/: AGENTS.md  BUILD.md  COPILOT_QUICKREF.md  JIRA_API_SETUP.md  JIRA_INTEGRATION.md  POI_SYSTEM.md  POI_VIEWING_SYSTEM_UPDATE.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md
docs/GDD/: GDD_CREATION_SUMMARY.md  GDD_INDEX.md  GDD_LINK_FIX_SUMMARY.md  GDD_MASTER.md  GDD_QUICK_REFERENCE.md  GDD_QUICK_START.md  GDD_README.md  GDD_Review_Notes.md  GDD_STRUCTURE.md  GDD_VISUAL_OVERVIEW.md
docs/GDD/CoreGameplay/: GDD_Core_Gameplay_Loop.md
docs/GDD/Narrative/: GDD_Three_Act_Structure.md
docs/GDD/ShipControl/: GDD_Ship_Direct_Control.md
docs/GDD/Tourism/: GDD_Passenger_System.md
docs/jira_updates/: COPY_PASTE_READY.md  MST-2_COMPLETE.md  MST-2_update.md  MST-3_PLANNED.md
docs/promtsessions/: Gamedesign_initial.txt
engine/: CMakeLists.txt
engine/include/: engine_audio.h  engine_camera.h  engine_config.h  engine_core.h  engine_ecs.h  engine_input.h  engine_math.h  engine_renderer.h  engine_resources.h  engine_spatial_hash.h  engine_ui.h
engine/src/: engine_audio.c  engine_camera.c  engine_config.c  engine_core.c  engine_ecs.c  engine_input.c  engine_renderer.c  engine_resources.c  engine_spatial_hash.c
game/: CMakeLists.txt
game/include/: config.h  debug_tools.h  game_ai_ecs.h  game_constants.h  game_ecs.h  game_fog_of_war.h  game_poi_ecs.h  game_poi_loader.h  game_render.h  game_satisfaction.h  game_ship_ecs.h  game_state.h  game_textures.h  game_update.h  input_actions.h  results_screen.h  ship_physics.h  ship_render.h  ship_telegraph.h  ship_ui.h  voyage_manager.h
game/src/: config.c  debug_tools.c  game_ai_ecs.c  game_ecs.c  game_fog_of_war.c  game_poi_ecs.c  game_poi_loader.c  game_render.c  game_satisfaction.c  game_ship_ecs.c  game_state.c  game_textures.c  game_update.c  input_actions.c  main.c  results_screen.c  ship_physics.c  ship_render.c  ship_telegraph.c  ship_ui.c  voyage_manager.c
tests/: CMakeLists.txt  engine_tests.cpp  poi_advanced_view_test.cpp  poi_system_test.cpp  results_tests.cpp  ship_physics_tuning_test.cpp  voyage_tests.cpp
tools/: CONFLUENCE_TOOLS_README.md  SHORTCUT_CREATOR_README.md  confluence_audit.py  confluence_fetch.py  confluence_pages.py  confluence_push.py  confluence_update_links.py  create_shortcut.ps1  execute_confluence_fix.py  jira_api.py  load_env.py  push_poi_docs.py  test_jira_access.ps1  update_jira_ticket.ps1
tools/audit_output/: children_pages.json  core_gameplay_loop.md  gdd_master.md  page_list.json  ship_direct_control_migrated.md
